Bug 223443 - Reply and forward prefixes not added (Re and Fwd)
Summary: Reply and forward prefixes not added (Re and Fwd)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 1.99.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438 223440
  Show dependency treegraph
 
Reported: 2010-01-19 19:52 UTC by Thomas McGuire
Modified: 2010-01-28 20:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-01-19 19:52:33 UTC
Version:           1.99.0 (using Devel)
OS:                Linux

When replying/forwarding, the prefix "Re:" or "Fwd:" is not added anymore.
Comment 1 Torgny Nyblom 2010-01-28 20:15:13 UTC
SVN commit 1081564 by tnyblom:

Remove member variable and replace with call to KConfigXT instead.

BUG: 223443


 M  +6 -8      messagehelper.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1081564