Remove member variable and replace with call to KConfigXT instead.

BUG: 223443

svn path=/trunk/KDE/kdepim/kmail/; revision=1081564